# tuan-takur

./: .gitignore  Backtesting.ipynb  Backtesting_YearlyReturns.ipynb  MonthlyReturns.ipynb  backend_service.py  package-lock.json  readme.md  summarized_portfolio_update_with_LQ45.csv  summarized_portfolio_update_with_LQ45.xlsx
Portfolio Optimization/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile_distroless_UV_multistage  Dockerfile_multistage_distroless_noUV  app.py  main.py  pyproject.toml  requirements.txt
Portfolio Optimization/API/: Dockerfile  app.py  requirements.txt
Portfolio Optimization/gke_deployment/: Dockerfile  app.py  configmap-template.yaml  deployment-template.yaml  keda-scaledobject-template.yaml  pdb.yaml  pyproject.toml
Portfolio Optimization/src/: data_loader.py  optimizer.py  settings.py
Portfolio Optimization/src/utils/: validators.py
backtesting/: backtesting.py
data/: README.md  lookback_30.csv  lookback_60.csv  lookback_90.csv
monthly/: Backtesting_MonthlyReturns.ipynb  Backtesting_MonthlyReturns_Update.ipynb  README.md  optimized_portfolio_monthlyrebalance_180datapoints.csv  optimized_portfolio_monthlyrebalance_30datapoints.csv  optimized_portfolio_monthlyrebalance_365datapoints.csv  optimized_portfolio_monthlyrebalance_60datapoints.csv  optimized_portfolio_monthlyrebalance_90datapoints.csv  summarized_portfolio.csv  summarized_portfolio_180_days.csv  summarized_portfolio_30_days.csv  summarized_portfolio_365_days.csv  summarized_portfolio_60_days.csv  summarized_portfolio_90_days.csv  (+4 more)
tutorial/: README.md
(+39 files in other folders)
